# borodulinartm_iz1

./: CMakeLists.txt  README.md  main.c  rebuilder_mass.c  rebuilder_mass.h  tests.cpp
code/: main.c  rebuilder_mass.c  rebuilder_mass.h  tests.cpp
linters/: run.sh
tests/: 1.tst
